--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JEE Mantra - Your Gateway to IIT Success</title>
+    <title>JEE Mantra - Your Ultimate Gateway to IIT Success</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <style>
@@ -100,7 +100,7 @@
         <div class="container mx-auto px-6">
             <div class="flex flex-wrap justify-center items-center gap-8 md:gap-16">
                 <div class="text-center">
-                    <p class="text-3xl font-bold text-blue-800">1k+</p>
+                    <p class="text-3xl font-bold text-blue-800">100+</p>
                     <p class="text-gray-600">Students Mentored</p>
                 </div>
                 <div class="text-center">
