--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <a href="#home" class="text-black-800 font-medium hover:text-blue-600">Home</a>
                 <a href="#courses" class="text-gray-600 font-medium hover:text-blue-600">Courses</a>
                 <a href="#features" class="text-gray-600 font-medium hover:text-blue-600">Features</a>
-                <a href="#contact" class="text-gray-600 font-medium hover:text-blue-600">Contact</a>
+                <a href="#contact" class="text-gray-600 font-medium hover:text-blue-600">Contact Us</a>
               <a href="login.html" class="bg-blue-600 text-white px-6 py-2 rounded-lg font-medium animated-btn hover:bg-blue-700">Login</a>
             </div>
             <button class="md:hidden focus:outline-none">
@@ -74,7 +74,7 @@
         <div class="container mx-auto px-6 py-24 flex flex-col md:flex-row items-center">
             <div class="md:w-1/2 mb-12 md:mb-0">
                 <h1 class="text-4xl md:text-5xl font-bold mb-6">Master JEE With Our Proven Methodology</h1>
-                <p class="text-xl mb-8 text-blue-100">Personalized Mentorship, Expert faculty, Group sessions and comprehensive study material to help you crack JEE Mains & Advanced.</p>
+                <p class="text-xl mb-8 text-blue-100">Personalized Mentorship, Expert faculty, Group sessions & comprehensive study material to help you crack JEE Mains & Advanced.</p>
                 <div class="flex flex-col sm:flex-row space-y-4 sm:space-y-0 sm:space-x-4">
                     <button class="bg-yellow-500 text-blue-900 px-8 py-3 rounded-lg font-bold animated-btn hover:bg-yellow-400">Enroll Now</button>
                     <button class="bg-transparent border-2 border-white text-white px-8 py-3 rounded-lg font-bold animated-btn hover:bg-white hover:text-blue-800">Free Demo</button>
@@ -82,7 +82,7 @@
                 <div class="mt-12">
                     <p class="mb-4 text-blue-100">Next Batch Starts In:</p>
                     <div class="countdown-timer flex">
-                        <span id="days">20</span>
+                        <span id="days">30</span>
                         <span id="hours">00</span>
                         <span id="minutes">00</span>
                         <span id="seconds">00</span>
@@ -104,11 +104,11 @@
                     <p class="text-gray-600">Students Mentored</p>
                 </div>
                 <div class="text-center">
-                    <p class="text-3xl font-bold text-blue-800">1+</p>
+                    <p class="text-3xl font-bold text-blue-800">2+</p>
                     <p class="text-gray-600">Years Experience</p>
                 </div>
                 <div class="text-center">
-                    <p class="text-3xl font-bold text-blue-800">60%</p>
+                    <p class="text-3xl font-bold text-blue-800">75%</p>
                     <p class="text-gray-600">Success Rate</p>
                 </div>
             </div>
