--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <nav class="bg-white shadow-md sticky top-0 z-50">
         <div class="container mx-auto px-6 py-3 flex justify-between items-center">
             <div class="flex items-center">
-                <img src="Screenshot 2024-10-22 114039.png" alt="JEE Mantra logo with book and graduation cap icon" class="h-10">
+                <img src="Screenshot 2024-10-22 114039.png" alt="JEE Mantra logo with book & graduation cap icon" class="h-10">
                 <span class="ml-3 text-xl font-bold text-blue-800">JEE Mantra</span>
             </div>
             <div class="hidden md:flex items-center space-x-8">
@@ -127,7 +127,7 @@
                     <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/5b7b41b5-fbc3-4781-aed4-1c5e41d8ad3b.png" alt="JEE Mains classroom with students solving physics problems on whiteboard" class="w-full h-48 object-cover">
                     <div classp-6">
                         <h3 class="text-xl font-bold text-blue-800 mb-2">Yoddha JEE 2026</h3>
-                        <p class="text-gray-600 mb-4">Comprehensive coverage of JEE Mains syllabus with concept-building and problem-solving.</p>
+                        <p class="text-gray-600 mb-4">Comprehensive coverage of JEE Mains syllabus with concept-building & problem-solving.</p>
                         <div class="flex justify-between items-center">
                             <span class="text-orange-500 font-bold">₹2,999</span>
                             <button class="text-blue-600 font-medium hover:underline">View Details</button>
