--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <nav class="bg-white shadow-md sticky top-0 z-50">
         <div class="container mx-auto px-6 py-3 flex justify-between items-center">
             <div class="flex items-center">
-                <img src="Screenshot 2024-10-22 114039.png" alt="JEE Mantra logo with book & graduation cap icon" class="h-10">
+                <img src="Screenshot 2024-10-22 114039.png" alt="JEE Mantra logo with book and graduation cap icon" class="h-10">
                 <span class="ml-3 text-xl font-bold text-blue-800">JEE Mantra</span>
             </div>
             <div class="hidden md:flex items-center space-x-8">
