--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             </div>
             <div class="hidden md:flex items-center space-x-8">
                 <a href="#home" class="text-black-800 font-medium hover:text-blue-600">Home</a>
-                <a href="#courses" class="text-gray-600 font-medium hover:text-blue-600">Our Courses</a>
+                <a href="#courses" class="text-gray-600 font-medium hover:text-blue-600">Courses</a>
                 <a href="#features" class="text-gray-600 font-medium hover:text-blue-600">Features</a>
                 <a href="#contact" class="text-gray-600 font-medium hover:text-blue-600">Contact Us</a>
               <a href="login.html" class="bg-blue-600 text-white px-6 py-2 rounded-lg font-medium animated-btn hover:bg-blue-700">Login</a>
