--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <nav class="bg-white shadow-md sticky top-0 z-50">
   <div class="container mx-auto px-6 py-3 flex justify-between items-center">
     <div class="flex items-center">
-      <img src="assets/logo.png" class="h-10" alt="JEE Mantra Logo">
+      <img src="Screenshot 2024-10-22 114039.png" class="h-10" alt="JEE Mantra Logo">
       <span class="ml-3 text-xl font-bold text-blue-800">JEE Mantra</span>
     </div>
 
